--- a/GomosOptiXModel/GomosOptiXModel.vcxproj
+++ b/GomosOptiXModel/GomosOptiXModel.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{EA388A09-5FE6-4F3D-B1ED-E1435790D15B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GomosOptiXModel</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,7 +116,9 @@
       <AdditionalDependencies>optix.1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>python ../compile_ptx_modules.py $(SolutionDir)/GomosOptiXModel/compile_ptx_modules_config.xml</Command>
+      <Command>
+      </Command>
+      <Message>python ../compile_ptx_modules.py $(SolutionDir)/GomosOptiXModel/compile_ptx_modules_config.xml</Message>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -154,23 +156,39 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\SpookyHash\SpookyV2.cpp" />
-    <ClCompile Include="atmospheric_layer.cpp" />
+    <ClCompile Include="atmospheric_layer.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="datetime.cpp" />
     <ClCompile Include="hashed_string.cpp" />
+    <ClCompile Include="has_contract_with_optix_context.cpp" />
+    <ClCompile Include="has_contract_with_optix_program.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="optix_context.cpp" />
+    <ClCompile Include="optix_geometry_group.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="optix_program.cpp" />
-    <ClCompile Include="optix_ray_generator.cpp" />
+    <ClCompile Include="optix_ray_generator.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="optix_scene_section.cpp" />
+    <ClCompile Include="ox_exception.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\SpookyHash\SpookyV2.h" />
     <ClInclude Include="atmospheric_layer.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="datetime.h" />
+    <ClInclude Include="has_contract_with_optix_context.h" />
+    <ClInclude Include="has_contract_with_optix_program.h" />
     <ClInclude Include="optix_geometry.h" />
     <ClInclude Include="optix_material.h" />
+    <ClInclude Include="ox_exception.h" />
     <ClInclude Include="ox_wrapper_fwd.h" />
     <ClInclude Include="gomos_ray_generator.h" />
     <ClInclude Include="hashed_string.h" />
