--- a/GomosOptiXModel/GomosOptiXModel.vcxproj.filters
+++ b/GomosOptiXModel/GomosOptiXModel.vcxproj.filters
@@ -21,46 +21,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\SpookyHash\SpookyV2.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="hashed_string.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="optix_program.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="datetime.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="log.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="optix_context.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="atmospheric_layer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="optix_scene_section.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ox_exception.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="optix_geometry_group.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="has_contract_with_optix_context.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="optix_ray_generator.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="has_contract_with_optix_program.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="optix_transform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -71,70 +32,16 @@
     <ClInclude Include="ptx_modules.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="optix_program.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="atmospheric_layer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\SpookyHash\SpookyV2.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="hashed_string.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="datetime.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="log.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="optix_context.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="matrix_types.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ray_payload.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="optix_buffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="gomos_ray_generator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="optix_scene_section.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="optix_scene.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="optix_geometry_group.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ox_wrapper_fwd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="optix_geometry.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="optix_material.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ox_exception.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="has_contract_with_optix_context.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="optix_ray_generator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="has_contract_with_optix_program.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="optix_transform.h">
+    <ClInclude Include="static_vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -144,9 +51,6 @@
     </Xml>
   </ItemGroup>
   <ItemGroup>
-    <None Include="optix_buffer_tuner.inl">
-      <Filter>Header Files</Filter>
-    </None>
     <None Include="gomos_gpu_kernel.cu">
       <Filter>OptiX Programs</Filter>
     </None>
