--- a/ox_wrapper/ox_wrapper.vcxproj.filters
+++ b/ox_wrapper/ox_wrapper.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="ox_wrapper\ray_casters\parallel_ray_generator.cpp">
       <Filter>ox_wrapper\ray_casters</Filter>
     </ClCompile>
+    <ClCompile Include="ox_wrapper\traverse_backup_buffer.cpp">
+      <Filter>ox_wrapper</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ox_wrapper\buffer.h">
@@ -173,13 +176,16 @@
     <ClInclude Include="ox_wrapper\shapes\fwd.h">
       <Filter>ox_wrapper\shapes</Filter>
     </ClInclude>
-    <ClInclude Include="ox_wrapper\ray_payload.h">
-      <Filter>ox_wrapper</Filter>
-    </ClInclude>
     <ClInclude Include="ox_wrapper\commons.h">
       <Filter>ox_wrapper</Filter>
     </ClInclude>
     <ClInclude Include="ptx.h" />
+    <ClInclude Include="ox_wrapper\traverse_backup_buffer.h">
+      <Filter>ox_wrapper</Filter>
+    </ClInclude>
+    <ClInclude Include="ox_wrapper\ray_radiance_payload.h">
+      <Filter>ox_wrapper</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ox_wrapper\buffer_tuner.inl">
