--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -118,6 +118,8 @@
     <ClCompile Include="ox_wrapper\contract_with_programs.cpp" />
     <ClCompile Include="ox_wrapper\material.cpp" />
     <ClCompile Include="ox_wrapper\material_assembly.cpp" />
+    <ClCompile Include="ox_wrapper\miss_shader.cpp" />
+    <ClCompile Include="ox_wrapper\miss_shader_assembly.cpp" />
     <ClCompile Include="ox_wrapper\program.cpp" />
     <ClCompile Include="ox_wrapper\ray_casters\parallel_ray_generator.cpp" />
     <ClCompile Include="ox_wrapper\ray_generator.cpp" />
@@ -146,6 +148,8 @@
     <ClInclude Include="ox_wrapper\contract_with_programs.h" />
     <ClInclude Include="ox_wrapper\material.h" />
     <ClInclude Include="ox_wrapper\material_assembly.h" />
+    <ClInclude Include="ox_wrapper\miss_shader.h" />
+    <ClInclude Include="ox_wrapper\miss_shader_assembly.h" />
     <ClInclude Include="ox_wrapper\program.h" />
     <ClInclude Include="ox_wrapper\ray_casters\fwd.h" />
     <ClInclude Include="ox_wrapper\ray_casters\parallel_ray_generator.h" />
