--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="ox_wrapper\contract_with_context.cpp" />
     <ClCompile Include="ox_wrapper\contract_with_programs.cpp" />
     <ClCompile Include="ox_wrapper\material.cpp" />
+    <ClCompile Include="ox_wrapper\materials\scattering_material.cpp" />
     <ClCompile Include="ox_wrapper\material_assembly.cpp" />
     <ClCompile Include="ox_wrapper\miss_shader.cpp" />
     <ClCompile Include="ox_wrapper\miss_shader_assembly.cpp" />
@@ -136,7 +137,6 @@
   <ItemGroup>
     <ClInclude Include="..\_3rd_party\SpookyHash\SpookyV2.h" />
     <ClInclude Include="ox_wrapper\buffer.h" />
-    <ClInclude Include="ox_wrapper\commons.h" />
     <ClInclude Include="ox_wrapper\constants.h" />
     <ClInclude Include="ox_wrapper\context.h" />
     <ClInclude Include="ox_wrapper\entity.h" />
@@ -147,6 +147,7 @@
     <ClInclude Include="ox_wrapper\contract_with_context.h" />
     <ClInclude Include="ox_wrapper\contract_with_programs.h" />
     <ClInclude Include="ox_wrapper\material.h" />
+    <ClInclude Include="ox_wrapper\materials\scattering_material.h" />
     <ClInclude Include="ox_wrapper\material_assembly.h" />
     <ClInclude Include="ox_wrapper\miss_shader.h" />
     <ClInclude Include="ox_wrapper\miss_shader_assembly.h" />
@@ -154,6 +155,7 @@
     <ClInclude Include="ox_wrapper\ray_casters\fwd.h" />
     <ClInclude Include="ox_wrapper\ray_casters\parallel_ray_generator.h" />
     <ClInclude Include="ox_wrapper\ray_generator.h" />
+    <ClInclude Include="ox_wrapper\ray_payloads.h" />
     <ClInclude Include="ox_wrapper\ray_radiance_payload.h" />
     <ClInclude Include="ox_wrapper\scene.h" />
     <ClInclude Include="ox_wrapper\scene_section.h" />
@@ -166,6 +168,7 @@
     <ClInclude Include="ox_wrapper\util\hashed_string.h" />
     <ClInclude Include="ox_wrapper\util\log.h" />
     <ClInclude Include="ox_wrapper\util\matrix_types.h" />
+    <ClInclude Include="ox_wrapper\util\optional.h" />
     <ClInclude Include="ox_wrapper\util\static_vector.h" />
     <ClInclude Include="ptx.h" />
   </ItemGroup>
