Complete C++ plumbing for scattering materials
Former-commit-id: f1ff71e280d8f166f38dfd2749393daf64e0a7fd

--- a/ox_wrapper/ox_wrapper.vcxproj.filters
+++ b/ox_wrapper/ox_wrapper.vcxproj.filters
@@ -96,7 +96,9 @@
     <ClCompile Include="ox_wrapper\miss_shader_assembly.cpp">
       <Filter>ox_wrapper</Filter>
     </ClCompile>
-    <ClCompile Include="ox_wrapper\materials\scattering_material.cpp" />
+    <ClCompile Include="ox_wrapper\materials\scattering_material.cpp">
+      <Filter>ox_wrapper\materials</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ox_wrapper\buffer.h">
