Begin implementation of ray generation recaster
Former-commit-id: 8d68785c39527d8f65540f6260d6b0b18c667e14

--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -154,7 +154,9 @@
     <ClInclude Include="ox_wrapper\program.h" />
     <ClInclude Include="ox_wrapper\ray_casters\fwd.h" />
     <ClInclude Include="ox_wrapper\ray_casters\parallel_ray_generator.h" />
+    <ClInclude Include="ox_wrapper\ray_casters\recaster_generator.h" />
     <ClInclude Include="ox_wrapper\ray_generator.h" />
+    <ClInclude Include="ox_wrapper\ray_occlusion_payload.h" />
     <ClInclude Include="ox_wrapper\ray_payloads.h" />
     <ClInclude Include="ox_wrapper\ray_radiance_payload.h" />
     <ClInclude Include="ox_wrapper\scene.h" />
