--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -67,6 +67,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -97,6 +98,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalOptions>/bigobj %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -110,10 +112,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\_3rd_party\SpookyHash\SpookyV2.cpp" />
+    <ClCompile Include="ox_wrapper\basic_factory.cpp" />
     <ClCompile Include="ox_wrapper\buffer.cpp" />
     <ClCompile Include="ox_wrapper\context.cpp" />
     <ClCompile Include="ox_wrapper\entity.cpp" />
     <ClCompile Include="ox_wrapper\exception.cpp" />
+    <ClCompile Include="ox_wrapper\factory_initializer_sentinel.cpp" />
     <ClCompile Include="ox_wrapper\geometry.cpp" />
     <ClCompile Include="ox_wrapper\geometry_group.cpp" />
     <ClCompile Include="ox_wrapper\contract_with_context.cpp" />
@@ -133,21 +137,25 @@
     <ClCompile Include="ox_wrapper\scene.cpp" />
     <ClCompile Include="ox_wrapper\scene_section.cpp" />
     <ClCompile Include="ox_wrapper\shapes\circle.cpp" />
+    <ClCompile Include="ox_wrapper\shapes\shapes_factory.cpp" />
     <ClCompile Include="ox_wrapper\transform.cpp" />
     <ClCompile Include="ox_wrapper\transformable.cpp" />
     <ClCompile Include="ox_wrapper\traverse_backup_buffer.cpp" />
     <ClCompile Include="ox_wrapper\util\datetime.cpp" />
     <ClCompile Include="ox_wrapper\util\hashed_string.cpp" />
     <ClCompile Include="ox_wrapper\util\log.cpp" />
+    <ClCompile Include="ox_wrapper\util\lua_support.cpp" />
     <ClCompile Include="ox_wrapper\util\misc.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\_3rd_party\SpookyHash\SpookyV2.h" />
+    <ClInclude Include="ox_wrapper\basic_factory.h" />
     <ClInclude Include="ox_wrapper\buffer.h" />
     <ClInclude Include="ox_wrapper\constants.h" />
     <ClInclude Include="ox_wrapper\context.h" />
     <ClInclude Include="ox_wrapper\entity.h" />
     <ClInclude Include="ox_wrapper\exception.h" />
+    <ClInclude Include="ox_wrapper\factory_initializer_sentinel.h" />
     <ClInclude Include="ox_wrapper\fwd.h" />
     <ClInclude Include="ox_wrapper\geometry.h" />
     <ClInclude Include="ox_wrapper\geometry_group.h" />
@@ -175,6 +183,7 @@
     <ClInclude Include="ox_wrapper\scene_section.h" />
     <ClInclude Include="ox_wrapper\shapes\circle.h" />
     <ClInclude Include="ox_wrapper\shapes\fwd.h" />
+    <ClInclude Include="ox_wrapper\shapes\shapes_factory.h" />
     <ClInclude Include="ox_wrapper\transform.h" />
     <ClInclude Include="ox_wrapper\transformable.h" />
     <ClInclude Include="ox_wrapper\traverse_backup_buffer.h" />
@@ -184,6 +193,7 @@
     <ClInclude Include="ox_wrapper\util\matrix_types.h" />
     <ClInclude Include="ox_wrapper\util\misc.h" />
     <ClInclude Include="ox_wrapper\util\optional.h" />
+    <ClInclude Include="ox_wrapper\util\lua_support.h" />
     <ClInclude Include="ox_wrapper\util\static_vector.h" />
     <ClInclude Include="ptx.h" />
   </ItemGroup>
