Implement inheritance relations in Lua bindings
Former-commit-id: 63efdaa96f05a1a265487fc5c05c0d4eb4331a07

--- a/ox_wrapper/ox_wrapper.vcxproj.filters
+++ b/ox_wrapper/ox_wrapper.vcxproj.filters
@@ -135,6 +135,10 @@
     <ClCompile Include="ox_wrapper\ray_generator_with_output_buffer.cpp">
       <Filter>ox_wrapper</Filter>
     </ClCompile>
+    <ClCompile Include="ox_wrapper\materials\materials_factory.cpp" />
+    <ClCompile Include="ox_wrapper\ray_casters\ray_casters_factory.cpp">
+      <Filter>ox_wrapper\ray_casters</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ox_wrapper\buffer.h">
@@ -283,6 +287,12 @@
     </ClInclude>
     <ClInclude Include="ox_wrapper\ray_generator_with_output_buffer.h">
       <Filter>ox_wrapper</Filter>
+    </ClInclude>
+    <ClInclude Include="ox_wrapper\materials\materials_factory.h">
+      <Filter>ox_wrapper\materials</Filter>
+    </ClInclude>
+    <ClInclude Include="ox_wrapper\ray_casters\ray_casters_factory.h">
+      <Filter>ox_wrapper\ray_casters</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
