--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -125,11 +125,13 @@
     <ClCompile Include="ox_wrapper\init.cpp" />
     <ClCompile Include="ox_wrapper\material.cpp" />
     <ClCompile Include="ox_wrapper\materials\black_body.cpp" />
+    <ClCompile Include="ox_wrapper\materials\materials_factory.cpp" />
     <ClCompile Include="ox_wrapper\material_assembly.cpp" />
     <ClCompile Include="ox_wrapper\miss_shader.cpp" />
     <ClCompile Include="ox_wrapper\miss_shader_assembly.cpp" />
     <ClCompile Include="ox_wrapper\program.cpp" />
     <ClCompile Include="ox_wrapper\ray_casters\parallel_ray_generator.cpp" />
+    <ClCompile Include="ox_wrapper\ray_casters\ray_casters_factory.cpp" />
     <ClCompile Include="ox_wrapper\ray_casters\recaster_generator.cpp" />
     <ClCompile Include="ox_wrapper\ray_generator.cpp" />
     <ClCompile Include="ox_wrapper\ray_generator_with_output_buffer.cpp" />
@@ -166,12 +168,14 @@
     <ClInclude Include="ox_wrapper\material.h" />
     <ClInclude Include="ox_wrapper\materials\black_body.h" />
     <ClInclude Include="ox_wrapper\materials\fwd.h" />
+    <ClInclude Include="ox_wrapper\materials\materials_factory.h" />
     <ClInclude Include="ox_wrapper\material_assembly.h" />
     <ClInclude Include="ox_wrapper\miss_shader.h" />
     <ClInclude Include="ox_wrapper\miss_shader_assembly.h" />
     <ClInclude Include="ox_wrapper\program.h" />
     <ClInclude Include="ox_wrapper\ray_casters\fwd.h" />
     <ClInclude Include="ox_wrapper\ray_casters\parallel_ray_generator.h" />
+    <ClInclude Include="ox_wrapper\ray_casters\ray_casters_factory.h" />
     <ClInclude Include="ox_wrapper\ray_casters\recaster_generator.h" />
     <ClInclude Include="ox_wrapper\ray_generator.h" />
     <ClInclude Include="ox_wrapper\ray_generator_with_output_buffer.h" />
