Add factory for rendering passes
Former-commit-id: c7e50f4f6a242e2bea1a92a02da72144f0545dd6

--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="ox_wrapper\ray_radiance_payload.h" />
     <ClInclude Include="ox_wrapper\rendering_passes\fwd.h" />
     <ClInclude Include="ox_wrapper\rendering_passes\rendering_pass.h" />
+    <ClInclude Include="ox_wrapper\rendering_passes\rendering_passes_factory.h" />
     <ClInclude Include="ox_wrapper\rendering_passes\scattering_rendering_pass.h" />
     <ClInclude Include="ox_wrapper\scene.h" />
     <ClInclude Include="ox_wrapper\scene_section.h" />
