Complete implementation of fatories
Former-commit-id: 1099b3aeabb95f7ddf30e69e785662eddee3f052

--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="ox_wrapper\ray_generator.cpp" />
     <ClCompile Include="ox_wrapper\ray_generator_with_output_buffer.cpp" />
     <ClCompile Include="ox_wrapper\rendering_passes\rendering_pass.cpp" />
+    <ClCompile Include="ox_wrapper\rendering_passes\rendering_passes_factory.cpp" />
     <ClCompile Include="ox_wrapper\rendering_passes\scattering_rendering_pass.cpp" />
     <ClCompile Include="ox_wrapper\scene.cpp" />
     <ClCompile Include="ox_wrapper\scene_section.cpp" />
