Add interactive mode
Interactive mode has been implemented. Few bugs concerning Lua bindings and persistent buffer mappings have been resolved.


Former-commit-id: 7e4a989f7dc514b4901bd156696cab538b3f8198

--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="ox_wrapper\util\optional.h" />
     <ClInclude Include="ox_wrapper\util\lua_support.h" />
     <ClInclude Include="ox_wrapper\util\static_vector.h" />
+    <ClInclude Include="ox_wrapper\version.h" />
     <ClInclude Include="ptx.h" />
   </ItemGroup>
   <ItemGroup>
