Refactor materials and miss shaders to support multiple ray types at once
Former-commit-id: 333393d8d7245badceebfc27feffe8dacbd456e4

--- a/ox_wrapper/ox_wrapper.vcxproj.filters
+++ b/ox_wrapper/ox_wrapper.vcxproj.filters
@@ -144,6 +144,7 @@
     <ClCompile Include="ox_wrapper\materials\materials_factory.cpp">
       <Filter>ox_wrapper\materials</Filter>
     </ClCompile>
+    <ClCompile Include="ox_wrapper\ray_payloads.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ox_wrapper\buffer.h">
