--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="ox_wrapper\ray_casters\recaster_generator.cpp" />
     <ClCompile Include="ox_wrapper\ray_generator.cpp" />
     <ClCompile Include="ox_wrapper\ray_generator_with_output_buffer.cpp" />
+    <ClCompile Include="ox_wrapper\ray_payloads.cpp" />
     <ClCompile Include="ox_wrapper\rendering_passes\rendering_pass.cpp" />
     <ClCompile Include="ox_wrapper\rendering_passes\rendering_passes_factory.cpp" />
     <ClCompile Include="ox_wrapper\rendering_passes\scattering_rendering_pass.cpp" />
