--- a/ox_wrapper_processor/ox_wrapper_processor.vcxproj
+++ b/ox_wrapper_processor/ox_wrapper_processor.vcxproj
@@ -41,11 +41,13 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\property_sheets\optix.props" />
     <Import Project="..\property_sheets\_3rd_party.props" />
+    <Import Project="..\property_sheets\ox_wrapper_debug_x64.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\property_sheets\optix.props" />
     <Import Project="..\property_sheets\_3rd_party.props" />
+    <Import Project="..\property_sheets\ox_wrapper_release_x64.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
