--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -40,11 +40,13 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\property_sheets\optix.props" />
     <Import Project="..\property_sheets\_3rd_party.props" />
+    <Import Project="..\property_sheets\ox_wrapper_debug_x64.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\property_sheets\optix.props" />
     <Import Project="..\property_sheets\_3rd_party.props" />
+    <Import Project="..\property_sheets\ox_wrapper_release_x64.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -158,10 +160,11 @@
     <ClInclude Include="ox_wrapper\buffer.h" />
     <ClInclude Include="ox_wrapper\constants.h" />
     <ClInclude Include="ox_wrapper\context.h" />
+    <ClInclude Include="ox_wrapper\datasave_agents\matlab_v4.h" />
     <ClInclude Include="ox_wrapper\entity.h" />
     <ClInclude Include="ox_wrapper\exception.h" />
     <ClInclude Include="ox_wrapper\factory_initializer_sentinel.h" />
-    <ClInclude Include="ox_wrapper\fwd.h" />
+    <ClInclude Include="ox_wrapper\ox_wrapper_fwd.h" />
     <ClInclude Include="ox_wrapper\geometry.h" />
     <ClInclude Include="ox_wrapper\geometry_group.h" />
     <ClInclude Include="ox_wrapper\contract_with_context.h" />
@@ -169,13 +172,13 @@
     <ClInclude Include="ox_wrapper\init.h" />
     <ClInclude Include="ox_wrapper\material.h" />
     <ClInclude Include="ox_wrapper\materials\black_body.h" />
-    <ClInclude Include="ox_wrapper\materials\fwd.h" />
+    <ClInclude Include="ox_wrapper\materials\ox_wrapper_materials_fwd.h" />
     <ClInclude Include="ox_wrapper\materials\materials_factory.h" />
     <ClInclude Include="ox_wrapper\material_assembly.h" />
     <ClInclude Include="ox_wrapper\miss_shader.h" />
     <ClInclude Include="ox_wrapper\miss_shader_assembly.h" />
     <ClInclude Include="ox_wrapper\program.h" />
-    <ClInclude Include="ox_wrapper\ray_casters\fwd.h" />
+    <ClInclude Include="ox_wrapper\ray_casters\ox_wrapper_ray_casters_fwd.h" />
     <ClInclude Include="ox_wrapper\ray_casters\parallel_ray_generator.h" />
     <ClInclude Include="ox_wrapper\ray_casters\ray_casters_factory.h" />
     <ClInclude Include="ox_wrapper\ray_casters\recaster_generator.h" />
@@ -184,14 +187,14 @@
     <ClInclude Include="ox_wrapper\ray_occlusion_payload.h" />
     <ClInclude Include="ox_wrapper\ray_payloads.h" />
     <ClInclude Include="ox_wrapper\ray_radiance_payload.h" />
-    <ClInclude Include="ox_wrapper\rendering_passes\fwd.h" />
+    <ClInclude Include="ox_wrapper\rendering_passes\ox_wrapper_rendering_passes_fwd.h" />
     <ClInclude Include="ox_wrapper\rendering_passes\rendering_pass.h" />
     <ClInclude Include="ox_wrapper\rendering_passes\rendering_passes_factory.h" />
     <ClInclude Include="ox_wrapper\rendering_passes\scattering_rendering_pass.h" />
     <ClInclude Include="ox_wrapper\scene.h" />
     <ClInclude Include="ox_wrapper\scene_section.h" />
     <ClInclude Include="ox_wrapper\shapes\circle.h" />
-    <ClInclude Include="ox_wrapper\shapes\fwd.h" />
+    <ClInclude Include="ox_wrapper\shapes\ox_wrapper_shapes_fwd.h" />
     <ClInclude Include="ox_wrapper\shapes\shapes_factory.h" />
     <ClInclude Include="ox_wrapper\transform.h" />
     <ClInclude Include="ox_wrapper\transformable.h" />
