--- a/ox_wrapper/ox_wrapper.vcxproj
+++ b/ox_wrapper/ox_wrapper.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="ox_wrapper\basic_factory.cpp" />
     <ClCompile Include="ox_wrapper\buffer.cpp" />
     <ClCompile Include="ox_wrapper\context.cpp" />
+    <ClCompile Include="ox_wrapper\data_store_agents\data_store_agents_factory.cpp" />
     <ClCompile Include="ox_wrapper\data_store_agents\matlab_v4.cpp" />
     <ClCompile Include="ox_wrapper\entity.cpp" />
     <ClCompile Include="ox_wrapper\exception.cpp" />
@@ -162,7 +163,9 @@
     <ClInclude Include="ox_wrapper\buffer.h" />
     <ClInclude Include="ox_wrapper\constants.h" />
     <ClInclude Include="ox_wrapper\context.h" />
+    <ClInclude Include="ox_wrapper\data_store_agents\data_store_agents_factory.h" />
     <ClInclude Include="ox_wrapper\data_store_agents\matlab_v4.h" />
+    <ClInclude Include="ox_wrapper\data_store_agents\ox_wrapper_data_store_agents_fwd.h" />
     <ClInclude Include="ox_wrapper\entity.h" />
     <ClInclude Include="ox_wrapper\exception.h" />
     <ClInclude Include="ox_wrapper\factory_initializer_sentinel.h" />
