--- a/ox_wrapper/ox_wrapper.vcxproj.filters
+++ b/ox_wrapper/ox_wrapper.vcxproj.filters
@@ -151,6 +151,9 @@
     <ClCompile Include="ox_wrapper\data_store_agents\matlab_v4.cpp">
       <Filter>ox_wrapper\data_store_agents</Filter>
     </ClCompile>
+    <ClCompile Include="ox_wrapper\data_store_agents\data_store_agents_factory.cpp">
+      <Filter>ox_wrapper\data_store_agents</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ox_wrapper\buffer.h">
@@ -316,6 +319,12 @@
       <Filter>ox_wrapper\data_store_agents</Filter>
     </ClInclude>
     <ClInclude Include="data_store_agents_common.h">
+      <Filter>ox_wrapper\data_store_agents</Filter>
+    </ClInclude>
+    <ClInclude Include="ox_wrapper\data_store_agents\data_store_agents_factory.h">
+      <Filter>ox_wrapper\data_store_agents</Filter>
+    </ClInclude>
+    <ClInclude Include="ox_wrapper\data_store_agents\ox_wrapper_data_store_agents_fwd.h">
       <Filter>ox_wrapper\data_store_agents</Filter>
     </ClInclude>
   </ItemGroup>
