--- a/ox_wrapper_processor/ox_wrapper_processor.vcxproj
+++ b/ox_wrapper_processor/ox_wrapper_processor.vcxproj
@@ -102,7 +102,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>optix.1.lib;ox_library.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>optix.1.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
