Somewhat working scattering pass
Former-commit-id: b794fbf7fb4f15a8871aa3f7b9e0f68ebd923413

--- a/ox_wrapper/settings.json
+++ b/ox_wrapper/settings.json
@@ -7,5 +7,6 @@
 	 "ox_wrapper/rendering_passes/ptx",
 	 "ox_wrapper/shapes/ptx",
 	 "ox_wrapper/materials/ptx"
-	]
+	],
+"context_stack_size": 8192
 }
